# PapoAI

./: .gitignore  README.md  app.py  html_template.html  main.py  pyproject.toml  requirements.txt
agents/: editor.py  layout.py  layout_v2.py  summarizer.py  summarizer_v2.py  visualizer.py  visualizer_v2.py
pdf_agent/: __init__.py  pdf2img.py
